# hackathon-todo

./: Details.txt  README.md  test_todo_cli.py
.specify/templates/: plan-template.md  tasks-template.md
history/prompts/001-task-crud/: 4-implement-cli-ui-and-core-logic-for-task-crud.green.prompt.md  5-summarize-completed-work.misc.prompt.md  7-confirm-tasks-md-completion.misc.prompt.md  8-confirm-refactoring-of-handle-add-task.misc.prompt.md  (+1 more)
phase-1/: test_todo_cli.py
phase-1/.specify/memory/: constitution.md
phase-1/specs_history/: v2_detailed_user_stories.md  v3_implementation_refined.md
phase-1/src/: pyproject.toml  ui.py
phase-2/backend/: .env  .env.example  README.md  alembic.ini  pyproject.toml
phase-2/backend/src/app/: __init__.py  config.py  main.py
phase-2/backend/src/app/auth/: __init__.py  dependencies.py  jwt.py  routes.py  service.py
phase-2/backend/src/app/database/: __init__.py  connection.py
phase-2/backend/src/app/database/migrations/: env.py
phase-2/backend/src/app/database/migrations/versions/: bb49ae97b707_initial_migration.py
phase-2/backend/src/app/models/: task.py  user.py
phase-2/backend/src/app/schemas/: auth.py  task.py
phase-2/backend/src/app/tasks/: __init__.py  routes.py  service.py
phase-2/backend/src/app/tests/: __init__.py  conftest.py  test_auth.py  test_security.py  test_tasks.py
phase-2/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
specs/001-task-crud/: spec.md
specs_history/: README.md  v1_basic_requirements.md  v4_final_spec.md
src/: main.py  tasks.py  ui.py
(+91 files in other folders)
